[Misc] Cleanup of DefaultReplaceCharacterEntityNameValidationConfigurationTest